Ui terminada y logica iniciada

--- a/app/src/main/res/layout/fragment_hola_coffee.xml
+++ b/app/src/main/res/layout/fragment_hola_coffee.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:fontFamily="@font/kavoon"
+        android:fontFamily="@font/londrina"
         android:text="@string/aficion2title"
         android:textColor="@color/black"
         android:textSize="50sp"
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="44dp"
-        android:fontFamily="@font/kavoon"
+        android:fontFamily="@font/londrina"
         android:text="@string/aficion2"
         android:textColor="@color/black"
         android:textSize="20sp"
