--- a/app/src/main/res/layout/activity_aficiones.xml
+++ b/app/src/main/res/layout/activity_aficiones.xml
@@ -19,14 +19,16 @@
             android:layout_height="?attr/actionBarSize"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:titleTextColor="@color/white"
-            android:background="@color/black">
+            android:background="@color/black"
+            >
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/iconapple"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="start|center_vertical"
                 app:srcCompat="@drawable/apple" />
+
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
