--- a/app/src/main/res/menu/menu_desplegable.xml
+++ b/app/src/main/res/menu/menu_desplegable.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
         android:title="FAV"
         android:id="@+id/favStarButton"
         android:icon="@drawable/baseline_star_outline_24"
         app:showAsAction="always"
+        />
+    <item
+        android:id="@+id/homeButton"
+        android:title="Aficiones"
+        app:showAsAction="never"
         />
     <item
         android:id="@+id/aboutMeButton"
